<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>basic_template</name>
  <version>0.0.0</version>
  <description>This is a basic template for rossdl</description>
  <maintainer email="fmrico@gmail.com">fmrico</maintainer>
  <maintainer email="nadia.hammoudeh.garcia@ipa.fraunhofer.de">nhg</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rossdl_cmake</depend>
  <depend>backward_ros</depend>
  <!--Add here further dependecies-->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
